# services/server/model/models.py
@@ -213,19 +213,19 @@ class Admin(db.Model):
         self.contact_no = contact_no
         
 
-# class Appointments(db.Model):
-#     __tablename__ = "appointments"
+class Appointments(db.Model):
+    __tablename__ = "appointments"
 
-#     appointment_id = db.Column(db.Integer, primary_key=True)
-#     patient_id = db.Column(db.Integer, db.ForeignKey('patient.user_id'), nullable=False)
-#     doctor_id = db.Column(db.Integer, db.ForeignKey('doctor.user_id'), nullable=False)
-#     datetime = db.Column(db.Integer)
+    appointment_id = db.Column(db.Integer, primary_key=True)
+    patient_id = db.Column(db.Integer, db.ForeignKey('patient.user_id'), nullable=False)
+    doctor_id = db.Column(db.Integer, db.ForeignKey('doctor.user_id'), nullable=False)
+    datetime = db.Column(db.Integer)
 
-#     def __init__(self, appointment_id, patient_id,  doctor_id, datetime):
-#         self.appointment_id = appointment_id
-#         self.patient_id = patient_id
-#         self.doctor_id = doctor_id
-#         self.datetime = datetime
+    def __init__(self, appointment_id, patient_id,  doctor_id, datetime):
+        self.appointment_id = appointment_id
+        self.patient_id = patient_id
+        self.doctor_id = doctor_id
+        self.datetime = datetime
 
 # class DoctorSchedule(db.Model):
 #     __tablename__ = "doctor_schedule"
